graficos con setInterval y sincronizacion de texto con codigo